manifests/golden2/tcp-1/gw-tcp-test-01.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: egress-tcp-test-01
  namespace: istio-egress
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls-port
      protocol: TLS
    hosts:
    - 'tcp-test-01.omegaworld.net'
    tls:
      mode: ISTIO_MUTUAL
