manifests/golden2/tcp-1/dr-tcp-test-01.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tcp-test-01
  namespace: istio-egress
spec:
  host: tcp-test-01.omegaworld.net 
  subsets:
  - name: tcp-test-01-tcp
    trafficPolicy:
      outlierDetection:
        splitExternalLocalOriginErrors: true
        consecutiveLocalOriginFailures: 1
        consecutiveGatewayErrors: 1
        consecutive5xxErrors: 1
        interval: 5s
        baseEjectionTime: 5m
        maxEjectionPercent: 60
      loadBalancer:
        simple: LEAST_REQUEST
      connectionPool:
        tcp:
          maxConnections: 100
          connectTimeout: 10s
