manifests/golden2/tcp-1/se-tcp-test-01.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: tcp-test-01
  namespace: istio-egress
spec:
  hosts:
  - tcp-test-01.omegaworld.net
  endpoints:
  - address: 192.168.0.10
  addresses:
  - 192.168.0.10/32
  ports:
  - number: 9000
    name: tcp-port-mesh
    protocol: TCP
  - number: 443
    name: tls-port-egress
    protocol: TLS
  resolution: STATIC
  location: MESH_EXTERNAL
