manifests/golden2/tcp-1/vs-tcp-test-01.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tcp-test-01
  namespace: istio-egress
spec:
  hosts:
  - tcp-test-01.omegaworld.net
  gateways:
  - egress-tcp-test-01
  - mesh
  tcp:
  - match:
    - gateways:
      - mesh
      port: 9000
    route:
    - destination:
        host: istio-egressgateway.istio-egress.svc.cluster.local
        port:
          number: 443
        subset: tcp-test-01-tls
      weight: 100
  - match:
    - gateways:
      - egress-tcp-test-01
      port: 443
    route:
    - destination:
        host: tcp-test-01.omegaworld.net
        port:
          number: 9000
        subset: tcp-test-01-tcp
      weight: 100
