manifests/golden2/tcp-1/auth-tcp-test-01.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-tcp-test-01
  namespace: istio-egress
spec:
  action: ALLOW
  rules:
  - when:
    - key: connection.sni
      values:
      - tcp-test-01.omegaworld.net
    - key: source.principal
      values:
      - wl.dev.omegaworld.net/ns/myapp/sa/tcp-client
  selector:
    matchLabels:
      istio: egressgateway
